deploymentmessageprocessor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: pochaakshybridmessageprocessor
  name: pochaakshybridmessageprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pochaakshybridmessageprocessor
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: pochaakshybridmessageprocessor
    spec:
      containers:
      - image: docker pull pochaakshybridapi20230726154153.azurecr.io/pochaakshybridmessageprocessor:1.1
        name: pochaakshybridmessageprocessor
        resources: {}
