deploymentlbshare.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: pochaakshybridapi
  name: pochaakshybridapi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pochaakshybridapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: pochaakshybridapi
    spec:
      volumes:
      - name: my-azure-file-volume
        storageName: permenant-storage-mount
        storageType: AzureFile
      containers:
      - image: pochaakshybridapi20230726154153.azurecr.io/pochaakshybridapi:1.1
        name: pochaakshybridapi
        ports:
        - containerPort: 80
        volumeMounts:
        - name: my-azure-file-volume
          mountPath: /myfileshare
        resources: {}

---

apiVersion: v1
kind: Service
metadata:
  name: pathways-cloud-api-svc
spec:
  type: LoadBalancer
  selector:
    run: pochaakshybridapi
  ports:
  - protocol: TCP
    port: 80
