hybridcompletedeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: pochaakshybridapi
  name: pochaakshybridapi
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pochaakshybridapi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: pochaakshybridapi
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: pochaakshybridapi20230726154153.azurecr.io/pochaakshybridapi:latest
        ports:
        - name: http
          containerPort: 80
        name: pochaakshybridapi
        resources: {}
        volumeMounts:  
        - name: nfs-volume
          mountPath: /myfileshare
      volumes:
        - name: nfs-volume
          nfs:
            server: 192.168.0.201
            path: /data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    run: pochaakshybridmessageprocessor
  name: pochaakshybridmessageprocessor
spec:
  replicas: 1
  selector:
    matchLabels:
      run: pochaakshybridmessageprocessor
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: pochaakshybridmessageprocessor
    spec:
      imagePullSecrets:
      - name: regcred
      containers:
      - image: pochaakshybridapi20230726154153.azurecr.io/pochaakshybridmessageprocessor:1.1
        name: pochaakshybridmessageprocessor
        resources: {}
        volumeMounts:  
        - name: nfs-volume
          mountPath: /myfileshare
      volumes:
        - name: nfs-volume
          nfs:
            server: 192.168.0.201
            path: /data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: pochaakshybridapi
  labels:
    run: pochaakshybridapi
spec:
  selector:
    run: pochaakshybridapi
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
